--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,6 @@ set(SOURCE_FILES
         src/support-lib/jni/djinni_main.cpp
         src/support-lib/jni/djinni_support.cpp)
 
-add_library(djinni_jni SHARED ${SOURCE_FILES})
+add_library(djinni_jni STATIC ${SOURCE_FILES})
 
 target_link_libraries(djinni_jni)
